--- a/app/css/map.css
+++ b/app/css/map.css
@@ -238,7 +238,7 @@ path.us-map-czones.faded {
   width: 100%;
   display: block;
   text-align: center;
-  margin-bottom: 25px;
+  margin: 60px 0;
 }
 
 .inline-maps-header h1 {
