--- a/app/css/carousel.css
+++ b/app/css/carousel.css
@@ -66,6 +66,8 @@
       text-align: center;
       margin-top:300px;
       font-size: 12px;
+      height: 65px;
+      width: 120px;
     }
     div.view_button.right {
       -moz-transform: rotate(270deg) translate(0, 40px);
@@ -96,6 +98,8 @@
   background-color: #0096D2;
   color:white;
   top:0px;
+  height: 65px;
+  width: 150px;
   margin-top:400px;
   margin-top:40vh;
   padding:10px 20px;
