--- a/app/css/main.css
+++ b/app/css/main.css
@@ -267,6 +267,10 @@ margin-top: 7.5px;
   ---------------------------------------
   --------------------------------------- */
 
+.feature-image {
+  margin: 50px 0;
+}
+
 .jump-to-map {
   color : #0096D2;
   cursor: pointer;
@@ -285,17 +289,11 @@ margin-top: 7.5px;
   margin: 20px 0px;
 }
 
-.place-holder-image {
-  width: 100%;
-  height: 400px;
-  line-height: 400px;
-  text-align: center;
-  color: #333;
-  background-color: #eee;
-  margin: 40px 0px;
-  border: 1px dashed #777;
-  border-radius: 5px;
+.quote-wrapper {
+  display: block;
+  margin-bottom: 50px;
 }
+
 
 .hr-wrapper {
   width: 100%;
