state mode enabled

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -388,6 +388,8 @@ label.select-label {
   bottom : 0;
   font-style: italic;
   padding-left: 10px;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .navbar {
