--- a/app/css/main.css
+++ b/app/css/main.css
@@ -40,7 +40,8 @@ h2 {
 }
 
 p {
-    font-size: 1.1em;
+    font-size: 18px;
+    line-height: 24px;
 }
 
 h1#title-header {
@@ -53,8 +54,9 @@ h1#title-header {
 
 h4#title-lead {
   margin-top: 20px;
-  line-height: 25px;
+  line-height: 26px;
   font-weight: bold;
+  letter-spacing: -.25px;
 }
 
 .urban-footer {
@@ -274,7 +276,7 @@ margin-top: 7.5px;
   --------------------------------------- */
 
 .feature-image {
-  margin: 50px 0;
+  margin: 90px 0 40px 0;
 }
 
 .jump-to-map {
@@ -292,12 +294,12 @@ margin-top: 7.5px;
   font-weight: 300;
   width: 100%;
   text-align: center;
-  margin: 20px 0px;
+  margin: 15px 0 20px 0;
 }
 
 .quote-wrapper {
   display: block;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 
@@ -309,7 +311,7 @@ margin-top: 7.5px;
 .orange-hr {
   width: 20%;
   display: inline-block;
-  border: 1.5px solid #fdbf11;
+  border: 1.5px solid #0096d2;
   margin : 10px;
 }
 
@@ -344,8 +346,7 @@ padding-bottom: 2px;
 }
 
 #top-row, #feature-top-row {
-  border-top: 8px solid #fdbf11;
-  border-radius: 8px;
+  border-top: 8px solid #000;
 }
 
 #return-to-map {
@@ -483,4 +484,27 @@ padding-bottom: 2px;
   top: 0px;
   left: 0px;
   z-index: 0;
+}
+
+/*---------------------------------------
+  ---------------------------------------
+    Adrienne Bootstrap Overrides & New
+  ---------------------------------------
+  --------------------------------------- */
+#container .img-rounded{
+    border-radius: none;
+}
+
+h1{
+    margin-top: 50px;
+}
+
+.well col-sm-12{
+    background-color: none;
+    padding:20px 0;
+    border: none;
+}
+
+.col-md-12{
+    padding: 10px 30px 20px 30px;
 }
