new url, style tweaks, trackduck

--- a/app/css/charts.css
+++ b/app/css/charts.css
@@ -47,6 +47,11 @@
   fill : none;
 }
 
+.x.axis {
+  font-size: 14px;
+  fill : none;
+}
+
 .axis path.domain {
   stroke : #000;
   stroke-width : 1px;
