--- a/app/css/carousel.css
+++ b/app/css/carousel.css
@@ -65,25 +65,16 @@
     div.view_button {
       text-align: center;
       margin-top:300px;
+      padding-top: 15px;
       font-size: 12px;
       height: 65px;
       width: 120px;
     }
     div.view_button.right {
+      right: 20px;
       -moz-transform: rotate(270deg) translate(0, 40px);
       -webkit-transform: rotate(270deg) translate(0, 40px);
       transform: rotate(270deg) translate(0, 40px);
-      border-top-left-radius:10px;
-      border-top-right-radius:10px;
-      border-bottom-left-radius: 0px;
-    }
-    div.view_button.left {
-      -moz-transform: rotate(90deg) translate(0, 30px);
-      -webkit-transform: rotate(90deg) translate(0, 30px);
-      transform: rotate(90deg) translate(0, 30px);
-      border-top-left-radius:10px;
-      border-top-right-radius:10px;
-      border-bottom-right-radius: 0px;
     }
 }
 
@@ -94,16 +85,18 @@
 
 .view_button {
   position: fixed;
-  font-size: 16px;
+  font-size: 14px;
   background-color: #0096D2;
   color:white;
   top:0px;
-  height: 65px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
+  border-radius: 60px;
   margin-top:400px;
   margin-top:40vh;
-  padding:10px 20px;
+  padding:5px;
   z-index: 1000;
+  padding-top: 40px;
   cursor: pointer;
   -webkit-transition: 0.2s ease-in-out;
      -moz-transition: 0.2s ease-in-out;
@@ -119,16 +112,9 @@
 }
 
 .view_button.right {
-  right: 0px;
-  text-align: right;
-  border-top-left-radius:10px;
-  border-bottom-left-radius:10px;
+  right: 50px;
+  text-align: center;
 }
-.view_button.left {
-  left: 0px;
-  text-align: left;
-  border-top-right-radius:10px;
-  border-bottom-right-radius:10px;
-}
+
 /*---------------------------------------
   --------------------------------------*/
