--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -15,21 +15,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 
-    <!-- build:css:dist css/app.min.css -->
-
-    <!-- vendor styles -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/select2/select2.css" rel="stylesheet">
-    <link href="lib/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- urban styles -->
-    <link href="css/map.css" rel="stylesheet">
-    <link href="css/charts.css" rel="stylesheet">
-    <link href="css/carousel.css" rel="stylesheet">
-    <link href="css/detail.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/select2-bootstrap.css" rel="stylesheet">
-    <!-- /build -->
+    <link rel="stylesheet" href="css/app.min.css">
 
 </head>
 
@@ -725,30 +711,7 @@
           </div>
       </div>
   </div> 
-    <!-- build:js:dist js/app.min.js -->
-
-    <!-- vendor scripts -->
-    <script src="lib/d3/d3.min.js"></script>
-    <script src="lib/d3/queue.v1.min.js"></script>
-    <script src="lib/d3/topojson.v1.min.js"></script>
-    <script src="lib/jquery/jquery-1.11.1.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="lib/select2/select2.min.js"></script>
-
-    <!-- urban scripts -->
-    <script src="src/projections.js"></script>
-    <script src="src/path.js"></script>
-    <script src="src/progress.js"></script>
-    <script src="src/select.js"></script>
-    <script src="src/dropdown.js"></script>
-    <script src="src/mapper.js"></script>
-    <script src="src/lineChart.js"></script>
-    <script src="src/barChart.js"></script>
-    <script src="src/detail.js"></script>
-    <script src="src/carousel.js"></script>
-    <script src="src/main.js"></script>
-
-    <!-- /build -->
+    <script src="js/app.min.js"></script>
 
     <script
         async
