--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -621,11 +621,11 @@
               </div>
               <div class="row" id="pyramids">
                 <div class="col-sm-12">
-                  <div class="pyramid col-xs-4 col-sm-15" id="all"></div>
-                  <div class="pyramid col-xs-4 col-sm-15" id="white"></div>
-                  <div class="pyramid col-xs-4 col-sm-15" id="black"></div>
-                  <div class="pyramid col-xs-4 col-sm-15" id="hispanic"></div>
-                  <div class="pyramid col-xs-4 col-sm-15" id="other"></div>
+                  <div class="pyramid col-xs-12 col-sm-15" id="all"></div>
+                  <div class="pyramid col-xs-12 col-sm-15" id="white"></div>
+                  <div class="pyramid col-xs-12 col-sm-15" id="black"></div>
+                  <div class="pyramid col-xs-12 col-sm-15" id="hispanic"></div>
+                  <div class="pyramid col-xs-12 col-sm-15" id="other"></div>
                 </div>
               </div>
 
@@ -663,31 +663,34 @@
               <a id="download-full" href="data/Download/AllCZ_AllFert_AllMort_AllMig.csv">All available data (0.5GB).</a>
             </div>
           </div>
-          <div class="col-sm-3" id="credits">
-            <h3> Project Credits </h3>
-            <h5> WEB TOOL AND FEATURE </h5>
-            <h6 class="credit-title">WEB DESIGN</h6>
-            Adrienne Hapanowicz, Tim Meko
-            <h6 class="credit-title">WEB DEVELOPMENT</h6>
-            Ben Southgate, Graham MacDonald
-            <h6 class="credit-title">STORY</h6>
-            Serena Lei
-            <h6 class="credit-title">EDITING</h6>
-            Elizabeth Forney
+          <div class="col-sm-6" id="credits">
+            <div class="col-sm-12">
+              <h3> Project Credits </h3>
             </div>
-            <div class="col-sm-3">
-            <h3> Project Credits </h3>
-            <h5> RESEARCH TEAM </h5>
-            <h6 class="credit-title">PROJECT DIRECTOR</h6>
-            Rolf Pendall
-            <h6 class="credit-title">LEAD PROGRAMMER</h6>
-            Kait Hildner
-            <h6 class="credit-title">KEY RESEARCHERS</h6>
-            Steven Martin, Nan Astone, Liz Peters, Austin Nichols
-            <h6 class="credit-title">PROJECT MANAGER</h6>
-            Pam Blumenthal
+            <div class="col-sm-6">
+              <h5> WEB TOOL AND FEATURE </h5>
+              <h6 class="credit-title">WEB DESIGN</h6>
+              Adrienne Hapanowicz, Tim Meko
+              <h6 class="credit-title">WEB DEVELOPMENT</h6>
+              Ben Southgate, Graham MacDonald
+              <h6 class="credit-title">STORY</h6>
+              Serena Lei
+              <h6 class="credit-title">EDITING</h6>
+              Elizabeth Forney
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-6">
+              <h5> RESEARCH TEAM </h5>
+              <h6 class="credit-title">PROJECT DIRECTOR</h6>
+              Rolf Pendall
+              <h6 class="credit-title">LEAD PROGRAMMER</h6>
+              Kait Hildner
+              <h6 class="credit-title">KEY RESEARCHERS</h6>
+              Steven Martin, Nan Astone, Liz Peters, Austin Nichols
+              <h6 class="credit-title">PROJECT MANAGER</h6>
+              Pam Blumenthal
+            </div>
+          </div>
+          <div class="col-sm-3">
             <h3>Questions or Comments?</h3>
             <a href="http://www.urban.org/about/contact.cfm">Let us know.</a>
           </div>
@@ -700,11 +703,8 @@
       </div>
 
     </div>
-
   </div>
-
-</div>
-           </div> <!-- end fill -->
+</div>           </div> <!-- end fill -->
           <div class="pull-center">
               <a class="carousel-control left" href="#carousel" data-slide="prev"></a>
               <a class="carousel-control right" href="#carousel" data-slide="next"></a>
