--- a/app/css/main.css
+++ b/app/css/main.css
@@ -24,6 +24,16 @@ html,body{
   font-size:14px;
 }
 
+svg.helper-svg {
+  position : absolute;
+  top : 0px;
+  left : 0px;
+  height: 0px;
+  width: 0px;
+  padding: 0px;
+  margin: 0px;
+}
+
 @media (max-width: 767px) {
   body {
     padding-left: 0;
