--- a/app/css/map.css
+++ b/app/css/map.css
@@ -55,16 +55,25 @@ path.us-map-czones-hover:hover,
 path.us-map-states-hover:hover,
 path.us-map-czones-hover.highlight {
   stroke : rgba(0,0,0,1);
-  stroke-width: 1px;
+  stroke-width: 2px;
 }
 
 path.us-map-states {
   fill : none;
   stroke : #fff;
-  stroke-width : 1.5px;
+  stroke-width : 3px;
+}
+
+circle.cities {
+  stroke: #000;
+  fill : #fff;
 }
 
 
+rect.city-label-background {
+  fill : rgba(255,255,255,0.85);
+  stroke : #777;
+}
 
 /*---------------------------------------
   --------------------------------------*/
