--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -17,9 +17,17 @@
         <div id="hamburger-bun" class="height-adjust">
             <div id="share-container">
                 <span id="hidden-share">
-                <div id="twitter"><i class="fa fa-twitter"></i></div>
-                <div id="facebook"><i class="fa fa-facebook"></i></div>
-                <div id="mail"><i class="fa fa-envelope-o"></i></div>
+                <a href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
+                    <div id="twitter">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                </a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
+                    <div id="facebook"><i class="fa fa-facebook"></i></div>
+                </a>
+                <a href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
+                    <div id="mail"><i class="fa fa-envelope-o"></i></div>
+                </a>
               </span>
                 <div id="social">
                     <i class="fa fa-share"></i>
