--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -52,9 +52,17 @@
         <div id="hamburger-bun" class="height-adjust">
             <div id="share-container">
                 <span id="hidden-share">
-                <div id="twitter"><i class="fa fa-twitter"></i></div>
-                <div id="facebook"><i class="fa fa-facebook"></i></div>
-                <div id="mail"><i class="fa fa-envelope-o"></i></div>
+                <a href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
+                    <div id="twitter">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                </a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
+                    <div id="facebook"><i class="fa fa-facebook"></i></div>
+                </a>
+                <a href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
+                    <div id="mail"><i class="fa fa-envelope-o"></i></div>
+                </a>
               </span>
                 <div id="social">
                     <i class="fa fa-share"></i>
@@ -477,7 +485,7 @@
 
               <div class="col-sm-8 border-group">
 
-                <div class="col-sm-9">
+                <div class="col-sm-9 no-left-pad">
 
                   <div class="settings-header">2. Filter map by: </div>
 
@@ -501,7 +509,7 @@
 
                 </div>
 
-                <div class="col-sm-5">
+                <div class="col-sm-5 no-left-pad">
                   <label class="select-label">Boundary</label>
 
                   <br/>
@@ -517,8 +525,9 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="col-sm-7" id="boundary-info">
-                  The map divides the United States into 740 commuting zones—places connected by local economies, which can cross city and state boundaries, and that include metro and rural areas.
+                  The map divides the Unisted States into 740 commuting zones- places connected by local economies.
                 </div>
 
               </div>
@@ -558,11 +567,6 @@
           </div>
         </div>
 
-
-        <div id="return-to-map">
-          Return to map <i id="return-button" class="fa fa-chevron-circle-up fa-2x"></i>
-        </div>
-
       </div>
     </div>
 
@@ -578,17 +582,20 @@
                   <div id="right_controls">
                     <select class="form-control" id="czone-select" data-live-search="true">
                     </select>
+                    <div id="return-to-map">
+                      Return to map <i id="return-button" class="fa fa-chevron-circle-up"></i>
+                    </div>
                   </div>
                 </div>
                 <div class="col-sm-9  col-sm-pull-3">
                   <h1 id="region"></h1>
+                  <div id="detail-settings"></div>
                 </div>
               </div>
 
               <div class="row">
 
                 <div class="col-sm-12">
-                  <div id="detail-settings"></div>
                   <span class="detail-label">  Population growth:
                     <span id="growth-cell"></span>
                   </span>
@@ -659,8 +666,6 @@
     <!-- container -->
     <div id="footer">
       <div class="container">
-      <div class="col-lg-10 col-lg-offset-1">
-        <div class="row">
         <div class="col-lg-12">
            <div class="col-sm-3">
             <h3>Data Available for Download</h3>
@@ -705,15 +710,14 @@
             </div>
           </div>
           <div class="col-sm-3">
-            <h3>Questions or Comments?</h3>
-            <a href="http://www.urban.org/about/contact.cfm">Let us know.</a>
+            <h3>Questions or comments? We're listening</h3>
+            share your feedback with researchers. AmericasFutures[at]urban.org  <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
           </div>
         </div>
         </div>
         <div class="row">
           <div id="copyright">Copyright &copy; Urban Institute 2014</div>
         </div>
-      </div>
       </div>
 
     </div>
