--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -43,7 +43,7 @@
 
               <div class="col-sm-8 border-group">
 
-                <div class="col-sm-9">
+                <div class="col-sm-9 no-left-pad">
 
                   <div class="settings-header">2. Filter map by: </div>
 
@@ -67,7 +67,7 @@
 
                 </div>
 
-                <div class="col-sm-5">
+                <div class="col-sm-5 no-left-pad">
                   <label class="select-label">Boundary</label>
 
                   <br/>
@@ -83,8 +83,9 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="col-sm-7" id="boundary-info">
-                  The map divides the United States into 740 commuting zones—places connected by local economies, which can cross city and state boundaries, and that include metro and rural areas.
+                  The map divides the Unisted States into 740 commuting zones- places connected by local economies.
                 </div>
 
               </div>
@@ -124,11 +125,6 @@
           </div>
         </div>
 
-
-        <div id="return-to-map">
-          Return to map <i id="return-button" class="fa fa-chevron-circle-up fa-2x"></i>
-        </div>
-
       </div>
     </div>
 
@@ -144,17 +140,20 @@
                   <div id="right_controls">
                     <select class="form-control" id="czone-select" data-live-search="true">
                     </select>
+                    <div id="return-to-map">
+                      Return to map <i id="return-button" class="fa fa-chevron-circle-up"></i>
+                    </div>
                   </div>
                 </div>
                 <div class="col-sm-9  col-sm-pull-3">
                   <h1 id="region"></h1>
+                  <div id="detail-settings"></div>
                 </div>
               </div>
 
               <div class="row">
 
                 <div class="col-sm-12">
-                  <div id="detail-settings"></div>
                   <span class="detail-label">  Population growth:
                     <span id="growth-cell"></span>
                   </span>
@@ -225,8 +224,6 @@
     <!-- container -->
     <div id="footer">
       <div class="container">
-      <div class="col-lg-10 col-lg-offset-1">
-        <div class="row">
         <div class="col-lg-12">
            <div class="col-sm-3">
             <h3>Data Available for Download</h3>
@@ -271,15 +268,14 @@
             </div>
           </div>
           <div class="col-sm-3">
-            <h3>Questions or Comments?</h3>
-            <a href="http://www.urban.org/about/contact.cfm">Let us know.</a>
+            <h3>Questions or comments? We're listening</h3>
+            share your feedback with researchers. AmericasFutures[at]urban.org  <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
           </div>
         </div>
         </div>
         <div class="row">
           <div id="copyright">Copyright &copy; Urban Institute 2014</div>
         </div>
-      </div>
       </div>
 
     </div>
